--- a/app/src/main/res/layout/fragment_birthday_selector.xml
+++ b/app/src/main/res/layout/fragment_birthday_selector.xml
@@ -3,28 +3,31 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="@string/header_birthday"
-            android:gravity="center"
-            android:textSize="18sp" />
-
-        <DatePicker
+        <cat.dev.fitness.BirthdayPicker
             android:id="@+id/birthday"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/cancel_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@android:string/cancel" />
 
             <Button
                 android:id="@+id/done_button"
@@ -34,13 +37,6 @@
                 android:layout_weight="1"
                 android:text="@android:string/ok" />
 
-            <Button
-                android:id="@+id/cancel_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@android:string/cancel" />
         </LinearLayout>
 
     </LinearLayout>
